# amazon-connect-python-types

./: .gitignore  Makefile  README.md  pyproject.toml
contact_flow_event/: type.py
proficiency_routing/: type.py
tests/: conftest.py
tests/unit/: test_contact_flow_validation.py  test_proficiency_rule_validation.py
