[project]
name = "amazon-connect-python-types"
version = "0.1.0"
description = "Repository for Amazon Connect Python types using Pydantic."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.3",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
addopts = "--cov=contact_flow_event --cov=proficiency_routing --cov-report=term-missing -vv"